--- a/Mikus_40K/src/components/AboutUs/AboutUs.css
+++ b/Mikus_40K/src/components/AboutUs/AboutUs.css
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: #2b2b2b; /* Fondo oscuro tipo metalizado */
+  background-color: #f4f4f9; /* Fondo oscuro tipo metalizado */
 }
 
 .about-us-box {
