--- a/Mikus_40K/src/components/AboutUs/AboutUs.css
+++ b/Mikus_40K/src/components/AboutUs/AboutUs.css
@@ -1,6 +1,6 @@
 .about-us-container {
   margin-top: 100px;
-  color: #00d7d7; /* Texto en cian vibrante */
+  color: #00d7d7 !important; /* Texto en cian vibrante */
   padding: 40px 20px;
   min-height: 100vh;
   font-family: 'Arial', sans-serif;
@@ -12,10 +12,9 @@
 }
 
 .about-us-box {
-  background-color: #1c1c1c; /* Fondo de la caja oscuro */
+  background-color: #f9f9f9; /* Fondo de la caja oscuro */
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5); /* Sombras intensas */
-  border: 2px solid #ffd700; /* Borde dorado */
   padding: 30px;
   max-width: 800px;
   width: 100%;
@@ -32,7 +31,7 @@
 .about-description {
   font-size: 1.1rem;
   margin-bottom: 20px;
-  color: #ffffff; /* Texto blanco */
+  color: #2c3e50; /* Texto blanco */
   line-height: 1.6;
   text-align: justify;
 }
